Prevent horizonal scroll in Schools page CSS overflow: hidden which weblink was responsible for.

--- a/EdlinkCapstone/ClientApp/src/components/Schools.css
+++ b/EdlinkCapstone/ClientApp/src/components/Schools.css
@@ -1,4 +1,4 @@
-﻿﻿ /*Mobile First*/
+﻿/*Mobile First*/
 .school {
     background-color: rgb(145, 172, 209);
     width: 78%;
@@ -13,6 +13,12 @@
 
 .details {
     margin-bottom: 20px;
+}
+
+.weblink {
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    overflow: hidden;
 }
 
 .searchBarInputSchools {
